fix: update selector for collapse button rotation

--- a/packages/support/resources/css/components/section.css
+++ b/packages/support/resources/css/components/section.css
@@ -134,7 +134,7 @@
     }
 
     &.fi-collapsed {
-        & .fi-section-collapse-btn {
+        & > header > .fi-section-collapse-btn {
             @apply rotate-180;
         }
 
